maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:6: error: '=' expected but ',' found.
def trouveBiscuit():Int,Int={
                       ^JediEscaper:17: error: illegal start of simple expression
def indiqueLeReste(x:Int,y:Int,cmpt:Int):Unit={
^